--- a/pages/comprartickets.html
+++ b/pages/comprartickets.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bgColorGris">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="#">
+                <a class="navbar-brand text-white" href="../index.html">
                     <img src="../assets/imagenes/codoacodo.png" alt="logo" width="100">
                     Conf.Bs.As.
                 </a>
@@ -31,7 +31,7 @@
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0  justificadoFinal">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">La conferencia</a>
+                            <a class="nav-link active text-white" aria-current="page" href="../index.html">La conferencia</a>
                         </li>
                         <li class="nav-item"><a class="nav-link text-muted" href="#oradores">Los oradores</a></li>
                         <li class="nav-item"> <a class="nav-link text-muted" href="#lugarYFecha">El lugar y la Fecha</a>
