--- a/pages/comprartickets.html
+++ b/pages/comprartickets.html
@@ -113,7 +113,7 @@
                 <div class="p-3 mb-2 bg-primary bg-opacity-25 text-primary rounded my-3">Total a pagar: $ <span id="total"></span></div>
                 <div class="d-flex justify-content-center">
                     <button id="btnBorrar" class="btn btn-success w-100 mb-2" type="reset">Borrar</button>
-                    <button id="btnResumen" class="btn btn-success w-100 ms-2 mb-2" type="button">Compra</button>
+                    <button id="btnResumen" class="btn btn-success w-100 ms-2 mb-2" type="button">Resumen</button>
                 </div>
 
 
